alignment fix 2

--- a/style.css
+++ b/style.css
@@ -307,6 +307,6 @@ span.radio > label {
 }
 
 #title-section .symbolic {
-    font-size: 3rem;
+    font-size: 2.5rem;
     height: 6rem;
 }
